# 1tracker_pi

./: .gitignore  CMakeLists.txt  Plugin.cmake
.circleci/: config.yml
build-deps/: control
buildwin/: win_deps.bat
ci/: appveyor.bat  run-coverage.sh  update-catalog.sh
cmake/: PluginCompiler.cmake
docs/: README.md  design.md  installatie.md  installation.md  manual.md  release-toolbar-icons.md  todo.md  vs2022-17.10-mutex-writeup.md
flatpak/: org.opencpn.OpenCPN.Plugin.onetracker.yaml
include/1tracker_pi/: atomic_file_writer.h  endpoint_error_summary.h  endpoint_sender.h  scheduler.h  state_store.h
libs/onetracker_core/: CMakeLists.txt
libs/plugin_metadata/: CMakeLists.txt  plugin_metadata.h.in
src/: atomic_file_writer.cpp  crash_guard.cpp  crash_guard.h  endpoint_error_summary.cpp  endpoint_sender.cpp  endpoint_type_registry.cpp  plugin.cpp  plugin.h  plugin_ui_utils.cpp  scheduler.cpp  state_store.cpp  tracker_dialog.cpp
test/: CMakeLists.txt  test_atomic_file_writer.cpp  test_endpoint_error_summary.cpp  test_endpoint_sender.cpp  test_scheduler.cpp  test_state_store.cpp
